Use List.of() and fix grammar